<resources>
    <string name="app_name">Raksha</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="parse_app_id">ds</string>
    <string name="parse_client_id">ds</string>


    <!-- Sign in related strings-->
    <string name="title_activity_signup">Sign up</string>
    <string name="prompt_name">Full Name</string>
    <string name="prompt_username">Email-ID</string>
    <string name="prompt_parent_username">Parent\'s Email-ID</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_name">enter a name</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="progress_login">Logging you in&#8230;</string>
    <string name="progress_signup">Signing you up&#8230;</string>


    <!-- Sign up related strings-->
    <string name="title_activity_welcome">WelcomeActivity</string>


    <string name="powered_by">Powered by</string>
    <string name="parse">Raksha</string>
    <string name="slogan">Always in your arms</string>
    <string name="title_activity_settings">Settings</string>
    <string name="search_distance">Search Distance</string>
    <string name="logout_full">Log out of Anywall</string>
    <string name="post">Post</string>
    <string name="prompt_post">Post</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>
    <string name="progress_post">Posting&#8230;</string>
    <string name="settings_distance_format">%d feet</string>
    <string name="activity_post_title">Create a Post</string>
    <string name="character_count_placeholder">0/140</string>
    <string name="title_activity_sample">Sample</string>
    <string name="title_activity_sign_up_parent">SignUpParentActivity</string>
    <string name="title_activity_sign_up_child">SignUpChildActivity</string>
    <string name="progress_pulling_locaion_child">Pulling Your Location</string>
    <string name="progress_pulling_locaion_parent">Pulling Your Child\'s Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_logout">Logout</string>
    <string name="prompt_Valid_phone_number">Valid Phone Number</string>
    <string name="error_ivalid_phone">Please Enter a valid Phone Number</string>

    <!--Buttons related strings -->
    <string name="call_child">Call Child</string>
    <string name="call_parent">Call Parent</string>
    <string name="send_info_police">Send information to Police</string>
    <string name="show_map">Show in Map</string>
    <string name="register_indoor">Register for Indoor Navigation</string>
    <string name="call_police">Call Police</string>
    <string name="title_activity_indoor_navigation">IndoorNavigationActivity</string>
    <string name="ble_not_supported">BLUETOOTH NOT SUPPORTED</string>
    <string name="ble_supported">BLE Supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth Not Supported In Your Device</string>
    <string name="Loading">Loading Location.. Please wait..</string>
    <string name="status">status</string>
    <string name="parent">Parent</string>
    <string name="child">Child</string>
    <string name="full_name">fullName</string>
    <string name="message_ble_not_supported">Bluetooth Low Energy Not Supported</string>
    <string name="error_internet_connection_database">Connection to Database failed. Check your Internet.</string>
    <string name="parse_indoor">Indoor</string>
    <string name="parse_building_id">buildingId</string>
    <string name="parse_building_plan">buildingPlan</string>
    <string name="signup">Join now</string>
    <string name="signin">Sign in</string>
    <string name="error_blank_checkbox">Please choose parent or child</string>
    <string name="login">Sign in</string>
    <string name="title_activity_login">Raksha</string>
    <string name="title_activity_sign_up">Sign Up</string>

    <string-array name="tab_array">
        <item>TAB 1</item>
        <item>TAB 2</item>
        <item>TAB 3</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Find People</item>
        <item>Photos</item>
        <item>Communities</item>
        <item>Pages</item>
        <item>What\'s Hot</item>
    </string-array>

</resources>
