<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignUpActivity" >

    <ScrollView
        android:id="@+id/child_signup_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@drawable/bg">

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"/>

            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"/>
            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"/>

            <EditText
                android:id="@+id/password_again_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_again"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionUnspecified"
                android:textColorHint="@color/colorAccent"/>

            <EditText
                android:id="@+id/phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_Valid_phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"/>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
                <CheckBox android:id="@+id/checkbox_parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parent"
                    android:textColor="@color/colorAccent"/>
                <CheckBox android:id="@+id/checkbox_child"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/child"
                    android:onClick="onCheckboxClicked"
                    android:textColor="@color/colorAccent"/>

            </TableRow>>

            <EditText
                android:id="@+id/parent_username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_parent_username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:visibility="gone"
                android:textColorHint="@color/colorAccent"/>
            <Button
                android:id="@+id/action_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/signup"
                android:background="@color/colorRaisedNormal1"
                android:layout_alignParentEnd="true"
                android:textColor="@color/textColorPrimary"
                android:elevation="8dp"
                android:translationZ="8dp"
                android:textAllCaps="false"/>
        </LinearLayout>
    </ScrollView>

</merge>